--- a/shared-lib/CMakeLists.txt
+++ b/shared-lib/CMakeLists.txt
@@ -2,4 +2,4 @@
 
 add_subdirectory(image_processor)
 add_subdirectory(thread_pool)
-add_subdirectory(qrcode_scanner)
+add_subdirectory(qrcode_finder)
